//
// Copyright 2018 rust-wallet developers
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package walletrpc;

service Wallet {
    rpc NewAddress (NewAddressRequest) returns (NewAddressResponse) {}
    rpc NewChangeAddress (NewChangeAddressRequest) returns (NewChangeAddressResponse) {};
    rpc GetUtxoList (GetUtxoListRequest) returns (GetUtxoListResponse) {}
    rpc WalletBalance (WalletBalanceRequest) returns (WalletBalanceResponse) {}
    rpc SyncWithTip (SyncWithTipRequest) returns (SyncWithTipResponse) {}
    rpc MakeTx (MakeTxRequest) returns (MakeTxResponse) {}
    rpc SendCoins (SendCoinsRequest) returns (SendCoinsResponse) {}
    rpc UnlockCoins (UnlockCoinsRequest) returns (UnlockCoinsResponse) {}
    rpc Shutdown (ShutdownRequest) returns (ShutdownResponse) {}
}

// TODO(evg): should be compatible with lncli?
enum AddressType {
    P2PKH = 0;
    P2SHWH = 1;
    P2WKH = 2;
}

message NewAddressRequest {
    AddressType addr_type = 1;
}

message NewAddressResponse {
    string address = 1;
}

message NewChangeAddressRequest {
    AddressType addr_type = 1;
}

message NewChangeAddressResponse {
    string address = 1;
}

message OutPoint {
    /// The referenced transaction's txid
    bytes txid = 1;
    /// The index of the referenced output in its transaction's vout
    uint32 vout = 2;
}

message Utxo {
    uint64 value = 1;
    OutPoint out_point = 2;
    AddressType addr_type = 3;
}

message GetUtxoListRequest {
}

message GetUtxoListResponse {
    repeated Utxo utxos = 1;
}

message WalletBalanceRequest {
}

message WalletBalanceResponse {
    uint64 total_balance = 1;
}

message UnlockCoinsRequest {
    uint64 lock_id = 1;
}

message UnlockCoinsResponse {
}

message SendCoinsRequest {
    string dest_addr = 1;
    uint64 amt = 2;
    bool submit = 3;
    bool lock_coins = 4;
    bool witness_only = 5;
}
message SendCoinsResponse {
    bytes serialized_raw_tx = 1;
    uint64 lock_id = 2;
}

message MakeTxRequest {
    repeated OutPoint ops = 1;
    string dest_addr = 2;
    uint64 amt = 3;
    bool submit = 4;
}
message MakeTxResponse {
    bytes serialized_raw_tx = 1;
}

message SyncWithTipRequest {}
message SyncWithTipResponse {}

message ShutdownRequest {}
message ShutdownResponse {}